@@ -1,3 +1,13 @@
+2001-11-30  Tsutomu Okada <okada@furuno.co.jp>
+
+	* [w3m-dev 02593]
+	* form.h: comment reformat
+	* matrix.c: ditto
+	* menu.c: ditto
+	* regex.c: ditto
+	* table.h: ditto
+	* terms.c: ditto
+
 2001-11-30  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 02592] Accept: and AcceptEncoding:
